git-svn-id: http://svn.vdombox.ru/flextools/trunk@7448 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -492,7 +492,7 @@
 					{
 						if ( StringUtil.trim( event.currentTarget.itemEditorInstance.text ) == '' ) 
 						{
-							if ( dataGridColumnsProps[ event.columnIndex ][ 'notnull' ].toLowerCase() == 'true' )
+							if ( dataGridColumnsProps[ event.columnIndex ][ 'notnull' ] == 'true' )
 								event.currentTarget.itemEditorInstance.text = 'REQUIRED';
 							else
 								event.currentTarget.itemEditorInstance.text = '';
