--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
@@ -77,8 +77,8 @@
 		</s:fill>
 	</s:Rect>
 	
-	<s:VGroup paddingTop="5" width="100%" height="100%" gap="0">
-		<s:HGroup width="100%" height="20" horizontalAlign="right" paddingRight="15" includeIn="tableEditor,tableStructure">
+	<s:VGroup paddingTop="5" width="100%" height="100%" gap="5">
+		<s:HGroup width="100%" height="20" verticalAlign="middle" horizontalAlign="right" paddingRight="15" includeIn="tableEditor,tableStructure">
 			
 			<s:Button id="data" label="Data" click="data_clickHandler(event)" />
 			
