Add Custom query step3 First minirelise
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7449 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableQuery.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableQuery.mxml
@@ -166,6 +166,7 @@
 			protected function query_changeHandler(event:TextOperationEvent):void
 			{
 				// TODO Auto-generated method stub
+				errorWriter.text = "";
 				if ( query.scroller.viewport.contentHeight < 61 )
 					query.height = 63;
 				else if ( query.scroller.viewport.contentHeight > 250 )
