Add Copy step 1
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7451 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -61,7 +61,7 @@
 							clipAndEnableScrolling="true"
 							text="{hostComponent.attributeValue}"
 							height="100%" width="100%"
-							minHeight="0"
+							paddingTop="5" paddingBottom="5" paddingLeft="5" paddingRight="5"
 							backgroundColor="#FFFFFF" bottom="65" fontFamily="Courier New" fontSize="12" left="5" right="5" top="5" 
 							focusIn="hostComponent.focus = true"/>
 	</s:Scroller>
