--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -179,13 +179,20 @@
 				var deleteItem : ContextMenuItem = new ContextMenuItem(resourceManager.getString( 'Wysiwyg_General', 'contextMenu_delete' ));
 				deleteItem.addEventListener( Event.SELECT, deleteContextMenuHandler, false, 0, true );
 				_contextMenu.addItem( deleteItem );
+				
+				var copyItem : ContextMenuItem = new ContextMenuItem(resourceManager.getString( 'Wysiwyg_General', 'contextMenu_copy' ));
+				copyItem.addEventListener( Event.SELECT, copyContextMenuHandler, false, 0, true );
+				_contextMenu.addItem( copyItem );
+				
+				var pasteItem : ContextMenuItem = new ContextMenuItem(resourceManager.getString( 'Wysiwyg_General', 'contextMenu_paste' ));
+				pasteItem.addEventListener( Event.SELECT, pasteContextMenuHandler, false, 0, true );
+				_contextMenu.addItem( pasteItem );
 			}
 			
 			protected function mxtreeitemrenderer1_contextMenuHandler(event:MouseEvent):void
 			{
 				// TODO Auto-generated method stub
-				if ( _data.@visible[ 0 ] )
-					_contextMenu.display( this.stage, event.stageX, event.stageY );
+				_contextMenu.display( this.stage, event.stageX, event.stageY );
 			}
 			
 			private function deleteContextMenuHandler( event : Event ) : void
@@ -205,6 +212,37 @@
 					}
 				}
 				dispatchEvent( deleteEvent );
+			}
+			
+			private function copyContextMenuHandler( event : Event ) : void
+			{
+				var copyEvent : ObjectsTreePanelEvent = new ObjectsTreePanelEvent( ObjectsTreePanelEvent.COPY );
+				copyEvent.objectID = _data.@id;
+				dispatchEvent( copyEvent );
+			}
+			
+			private function pasteContextMenuHandler( event : Event ) : void
+			{
+				var pasteEvent : ObjectsTreePanelEvent = new ObjectsTreePanelEvent( ObjectsTreePanelEvent.PASTE );
+				pasteEvent.objectID = _data.@id;
+				
+				var xmlListCollection : XMLListCollection = (owner as Tree).dataProvider as XMLListCollection;
+				var xml : XML;
+				for each ( xml in xmlListCollection )
+				{
+					var xmlList : XMLList = xml..object;
+					var xml2 : XML;
+					for each ( xml2 in xmlList )
+					{
+						if ( xml2.@id == _data.@id )
+							pasteEvent.pageID = xml.@id;
+					}
+				}
+				
+				if ( !pasteEvent.pageID )
+					pasteEvent.pageID = pasteEvent.objectID;
+				
+				dispatchEvent( pasteEvent );
 			}
 			
 		]]>
