--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
@@ -37,35 +37,38 @@
 
 	<mx:Script>
 		<![CDATA[
+			import ExtendedAPI.com.containers.SuperAlert;
 			import ExtendedAPI.com.utils.ObjectUtils;
 			import ExtendedAPI.com.utils.Utils;
-			import mx.events.IndexChangedEvent;
-			import mx.events.FlexEvent;
-			import ExtendedAPI.com.containers.SuperAlert;
-			import mx.utils.NameUtil;
+			
+			import PowerPack.com.graph.GraphCanvas;
 			import PowerPack.com.graph.GraphCanvasEvent;
-			import PowerPack.com.managers.ProgressManager;
+			import PowerPack.com.graph.Node;
 			import PowerPack.com.managers.ContextManager;
-			import mx.events.CollectionEventKind;
+			import PowerPack.com.managers.LanguageManager;
+			import PowerPack.com.managers.ProgressManager;
+			import PowerPack.com.panel.graphsClasses.AccordionChild;
+			import PowerPack.com.panel.graphsClasses.AccordionHeader;
+			import PowerPack.com.panel.graphsClasses.GraphsAccordionEvent;
+			
+			import mx.binding.utils.*;
+			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
-			import mx.events.CollectionEvent;
-			import mx.managers.DragManager;
-			import PowerPack.com.managers.LanguageManager;
-			import PowerPack.com.panel.graphsClasses.AccordionHeader;
-			import PowerPack.com.panel.graphsClasses.AccordionChild;
-			import PowerPack.com.graph.GraphCanvas;
-			import PowerPack.com.graph.Node;
-			import mx.utils.ArrayUtil;
-			import mx.managers.FocusManager;
-			import mx.controls.List;
-			import mx.events.DropdownEvent;
-            import mx.events.ListEvent;
-			import mx.collections.ArrayCollection;
 			import mx.containers.ViewStack;
 			import mx.controls.ComboBox;
-			import mx.binding.utils.*;
-            import mx.utils.ObjectProxy;
+			import mx.controls.List;
+			import mx.events.CollectionEvent;
+			import mx.events.CollectionEventKind;
+			import mx.events.DropdownEvent;
+			import mx.events.FlexEvent;
+			import mx.events.IndexChangedEvent;
+			import mx.events.ListEvent;
+			import mx.managers.DragManager;
+			import mx.managers.FocusManager;
+			import mx.utils.ArrayUtil;
+			import mx.utils.NameUtil;
+			import mx.utils.ObjectProxy;
 
 
 			static private var defaultCaptions:Object = {
@@ -174,10 +177,14 @@
 				
 				graphAccordionChild.lstGraphs.addEventListener(ListEvent.CHANGE, changeLstGraphsHandler);
 				graphAccordionChild.lstGraphs.addEventListener(MouseEvent.DOUBLE_CLICK, btnRenameClickHandler);
-				graphAccordionChild.lstGraphs.addEventListener("editingComplete", completeEditLstGraphsHandler);
 				
-				graphAccordionChild.addEventListener("tabClosing", closingEditLstGraphsHandler);	
-				graphAccordionChild.addEventListener("captionChanged", captionChangedHandler);	
+				graphAccordionChild.lstGraphs.addEventListener(GraphsAccordionEvent.GRAPH_VALUE_CHECKED, onLstGraphsValueChecked);
+				graphAccordionChild.lstGraphs.addEventListener(GraphsAccordionEvent.GRAPH_VALUE_EDITING_COMPLETE, onLstGraphsEditingComplete);
+				
+				graphAccordionChild.addEventListener(GraphsAccordionEvent.GRAPH_VALUE_EDITING_COMPLETE, onLstGraphsEditingComplete);
+				
+				graphAccordionChild.addEventListener(GraphsAccordionEvent.TAB_CLOSING, closingEditLstGraphsHandler);	
+				graphAccordionChild.addEventListener(GraphsAccordionEvent.CAPTION_CHANGED, captionChangedHandler);	
 				
 				dispatchEvent(new Event(TPL_CHANGED));
 				
@@ -558,14 +565,29 @@
 				}
 			}
 
-			private function completeEditLstGraphsHandler(event:ListEvent):void
+			private function onLstGraphsValueChecked(event:GraphsAccordionEvent):void
+			{
+				var selectedAccordionChild	: AccordionChild = graphsAccordion.selectedChild as AccordionChild; 
+				var selectedGraphIndex		: int = selectedAccordionChild.lstGraphs.selectedIndex;
+				var selectedGraph			: GraphCanvas = selectedAccordionChild.graphs[selectedGraphIndex]; 
+				
+				selectedAccordionChild.uniqueGraphName = isUniqueGraphNameInGlobal(selectedAccordionChild.newGraphName, selectedGraph);
+			}
+			
+			private function onLstGraphsEditingComplete(event:GraphsAccordionEvent):void
 			{        	
 				vsViewStack.invalidateDisplayList();
 				cbInitGraph.invalidateDisplayList();
 				
 				dispatchEvent(new Event(TPL_CHANGED));    						
 			}
-				    			
+				    		
+			private function onSelectedGraphChanged(event:GraphsAccordionEvent):void
+			{
+				if (event.graph)
+					selectGraph(event.graph);
+			}
+			
 			private function cbInitGraphChangeHandler(event:ListEvent):void
 			{
 				setInitial(ComboBox(event.target).selectedItem);
@@ -660,25 +682,45 @@
 			public function createUniqueCopyName(name:String, context:Object):String
 			{
 				var index:int = 1;
-				var exists:Boolean = false;
+				var isUniqueName:Boolean = true;
 				var newName:String = name+'_'+index;
 				
 				do
 				{
-					exists = false;
 					newName = name+'_'+index;
-					for each (var obj:Object in context)
-					{
-						if(obj.name == newName)
-						{
-							exists = true;
-							break;
-						} 
-					}
+					isUniqueName = isUniqueGraphNameInCategory(newName, context);
+					
 					index++;
-				} while(exists)
+				} while(!isUniqueName)
 				
 				return newName;
+			}
+			
+			private function isUniqueGraphNameInCategory (graphName:String, category:Object, currentGraph : GraphCanvas = null) : Boolean
+			{
+				for each (var obj:Object in category)
+				{
+					if (obj == currentGraph)
+						continue;
+					
+					if(obj.name == graphName)
+					{
+						return false;
+					} 
+				}
+				
+				return true;
+			}
+			
+			public function isUniqueGraphNameInGlobal (graphName:String, currentGraph : GraphCanvas) : Boolean
+			{
+				for each (var accordionChild : AccordionChild in graphsAccordion.getChildren())
+				{
+					if (!isUniqueGraphNameInCategory(graphName, accordionChild.graphs, currentGraph))
+						return false;
+				}
+				
+				return true;
 			}
 								
 			private function btnDeleteClickHandler(event:MouseEvent):void
