--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/graphsClasses/AccordionHeader.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/graphsClasses/AccordionHeader.mxml
@@ -13,34 +13,35 @@
 	
 	<mx:Script>
 		<![CDATA[
-			import mx.core.Window;
-			import mx.core.EdgeMetrics;
-			import mx.core.Container;
-			import mx.core.FlexTextField;
-			import mx.managers.PopUpManager;
-			import mx.events.FlexEvent;
-			import mx.controls.TextInput;
-			import mx.binding.utils.BindingUtils;
-			import mx.core.UITextField;
-			import mx.core.IUITextField;
 			import ExtendedAPI.com.containers.SuperAlert;
+			
+			import PowerPack.com.graph.GraphCanvas;
 			import PowerPack.com.managers.LanguageManager;
 			import PowerPack.com.panel.Graphs;
-			import PowerPack.com.graph.GraphCanvas;
-			import mx.controls.Alert;
-			import mx.utils.ArrayUtil;
+			
+			import mx.binding.utils.BindingUtils;
 			import mx.containers.Accordion;
+			import mx.controls.Alert;
+			import mx.controls.TextInput;
+			import mx.core.Container;
+			import mx.core.EdgeMetrics;
+			import mx.core.FlexTextField;
 			import mx.core.IUIComponent;
-			import mx.managers.DragManager;
+			import mx.core.IUITextField;
+			import mx.core.UITextField;
+			import mx.core.Window;
 			import mx.events.DragEvent;
+			import mx.events.FlexEvent;
+			import mx.managers.DragManager;
+			import mx.managers.PopUpManager;
+			import mx.utils.ArrayUtil;
 			
 		    //--------------------------------------------------------------------------
 		    //
 		    //  Class variables and constants
 		    //
 		    //--------------------------------------------------------------------------
-    			
-			public static const CAPTION_CHANGED:String = "captionChanged";
+    		
 			
 			//----------------------------------
 		    //  labelTextField
@@ -230,7 +231,7 @@
 					invalidateDisplayList();
 					
 					if(bCommit)
-						accordChild.dispatchEvent(new Event(CAPTION_CHANGED));
+						accordChild.dispatchEvent(new GraphsAccordionEvent(GraphsAccordionEvent.CAPTION_CHANGED));
 				}
 			}
 							   
@@ -282,9 +283,10 @@
 		        	
 		    	event.stopPropagation();
 		    	
-		        var e:Event = new Event("tabClosing", true, true);
+		        var e : Event = new GraphsAccordionEvent(GraphsAccordionEvent.TAB_CLOSING, null, true, true);
 		        accordChild.dispatchEvent(e);
-		        if (e.isDefaultPrevented())
+		        
+				if (e.isDefaultPrevented())
 		        {
 		            event.preventDefault();
 		        }
@@ -292,7 +294,7 @@
 		        {
 		            event.preventDefault();
 		            accordChild.parent.removeChild(accordChild);
-		            accordChild.dispatchEvent(new Event("tabClose"));
+		            accordChild.dispatchEvent(new GraphsAccordionEvent(GraphsAccordionEvent.TAB_CLOSE));
 		        }
 		    }
 		
@@ -313,10 +315,9 @@
 		    
 		    private function dragDropHandler(event:DragEvent):void
 		    {
-		    	var items:Array = 
-	                    event.dragSource.dataForFormat("items") as Array;
+		    	var items:Array = event.dragSource.dataForFormat("items") as Array;
 		    	
-		    	if(items[0] is GraphCanvas)
+		    	if (items[0] is GraphCanvas)
 		    	{
 		    		var graph:GraphCanvas = items[0] as GraphCanvas;
 		    		var source:AccordionChild = AccordionChild(event.dragInitiator.parent);
@@ -326,7 +327,8 @@
 					graph.category = destination.label;					
 					destination.graphs.addItem(graph);
 					
-					Graphs(destination.parent.parent.parent.parent).selectGraph(graph);
+					var evt : GraphsAccordionEvent = new GraphsAccordionEvent(GraphsAccordionEvent.SELECTED_GRAPH_CHANGED, graph); 
+					destination.dispatchEvent(evt);
 		    	}
 		    }
 		        	    			
