--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
@@ -22,7 +22,7 @@
 	</s:Rect>
 
 	<mx:Tree id="objectsTree" maxHorizontalScrollPosition="140" horizontalScrollPolicy="auto"
-			 itemRenderer="net.vdombox.ide.modules.events.view.components.ObjectsTreePanelItemRenderer"
+			 itemRenderer="net.vdombox.components.ObjectsTreePanelItemRenderer"
 			 height="100%"
 			 width="100%" contentBackgroundAlpha="0"/>
 </s:Panel>
