--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -10,9 +10,12 @@
 		<![CDATA[
 			import mx.collections.ArrayCollection;
 			import mx.controls.LinkButton;
+			import mx.controls.advancedDataGridClasses.AdvancedDataGridColumn;
 			import mx.controls.dataGridClasses.DataGridColumn;
+			import mx.events.AdvancedDataGridEvent;
 			import mx.events.DataGridEvent;
 			import mx.events.FlexEvent;
+			import mx.utils.ObjectUtil;
 			import mx.utils.StringUtil;
 			import mx.utils.UIDUtil;
 			
@@ -20,6 +23,7 @@
 			import net.vdombox.ide.modules.dataBase.events.EditorEvent;
 			import net.vdombox.ide.modules.dataBase.events.QueueEvent;
 			import net.vdombox.ide.modules.dataBase.model.vo.StructureVO;
+			import net.vdombox.ide.modules.dataBase.view.components.ItemRenderers.TextInputItemRenderers;
 			import net.vdombox.ide.modules.dataBase.view.components.Queue.QueueManager;
 			
 			private var _objectVO : ObjectVO;
@@ -28,7 +32,7 @@
 			private var queue : QueueManager;
 			private var queryResult:XML;
 			private var tableStructureXML:XML;
-			private var dataGridColumns:Array = [];
+			public var dataGridColumns:Array;
 			private var dataGridColumnsProps:Array = [];
 			private var currentPage:int;
 			private var pages:Array = []; /* of XML */
@@ -39,6 +43,7 @@
 			
 			[Bindable]
 			private var dataGridProvider:ArrayCollection = new ArrayCollection();
+			private var dataGridProviderOld:Dictionary = new Dictionary( true );
 			
 			private var AMOUNT:int = 10000;
 			
@@ -161,20 +166,24 @@
 			
 			private function setTableHeaders():void 
 			{
-				
-				dataGridColumns = [];
-				for each (var xmlHeader:XML in tableStructureXML.column) 
-				{
-					var _header:DataGridColumn = new DataGridColumn();
-					var columnProps : StructureVO = new StructureVO( xmlHeader );
+				if ( !dataGridColumns )
+				{	
+					dataGridColumns = [];
+					for each (var xmlHeader:XML in tableStructureXML.column) 
+					{
+						var _header:AdvancedDataGridColumn = new AdvancedDataGridColumn();
+						var columnProps : StructureVO = new StructureVO( xmlHeader );
 					
-					dataGridColumnsProps.push( columnProps );
-					_header.dataField = xmlHeader.@name;
+						_header.itemRenderer = new ClassFactory( TextInputItemRenderers );
+						dataGridColumnsProps.push( columnProps );
+						_header.dataField = xmlHeader.@name;
 				
-					dataGridColumns.push( _header );
+						dataGridColumns.push( _header );
 					
+					}
+					dataTable.columns = dataGridColumns;
 				}
-				dataTable.columns = dataGridColumns;
+				
 				
 			}
 			
@@ -221,6 +230,7 @@
 				
 				/* Show current page */
 				dataGridProvider = new ArrayCollection();
+				dataGridProviderOld = new Dictionary( true );
 				for each ( var xmlRow:XML in pages[ currentPage ].row ) 
 				{
 					/* Create tableRow object */
@@ -232,10 +242,11 @@
 						cellIndex++;
 					}
 					
-					tableRow["fnew"] = false;
-					tableRow["changed"] = false;
+//					tableRow["fnew"] = false;
+//					tableRow["changed"] = false;
 					tableRow["GUID"] = UIDUtil.createUID(); 
 					dataGridProvider.addItem( tableRow );
+					dataGridProviderOld[ tableRow["id"] ] = ObjectUtil.copy( tableRow );
 				}
 				
 				buildPagesTickets();
@@ -336,7 +347,7 @@
 					pagesArea.addChild( rightShift );
 				}
 				
-				commit.enabled = false;
+				
 			}
 			
 			private function pageClickHandler( mEvent : MouseEvent ) : void 
@@ -382,7 +393,7 @@
 				/* Create tableRow object */
 				var tableRow:Object = new Object();
 				var columnIndex:int = 0;
-				for each ( var dgColumn:DataGridColumn in dataGridColumns ) 
+				for each ( var dgColumn:AdvancedDataGridColumn in dataGridColumns ) 
 				{
 					if ( !dataGridColumnsProps[columnIndex].aincrement ) 
 					{
@@ -398,31 +409,11 @@
 					columnIndex++;
 				}
 				
-				tableRow['fnew'] = true;
-				tableRow['changed'] = false;
 				tableRow['GUID'] = UIDUtil.createUID();
-				
-				/* Construct request */
-				var requestXMLParam:XML = new XML( <data /> );
-				var xmlRow:XML = new XML( <row id='NULL' /> );						
-				for each ( var dataGridCell:Object in dataGridColumns ) 
-				{
-					xmlRow.appendChild(
-						<cell name={dataGridCell.dataField}>
-						{tableRow[dataGridCell.dataField]}
-						</cell> );
-				}
-				requestXMLParam.appendChild( xmlRow );
-				
-				queue.addRequest(
-					tableRow['GUID'],
-					'add_row',
-					requestXMLParam.toXMLString() );
 				
 				dataGridProvider.addItem( tableRow );
 				
 				dataTable.selectedIndex = dataGridProvider.length - 1;
-				commit.enabled = true;
 				
 				updateQueueLength();
 			}
@@ -432,10 +423,59 @@
 				addRowBtnClickHandler();
 			}
 			
+			private function getXMLByRow( item : Object ) : XML
+			{
+				var requestXMLParam:XML = new XML( <data /> );
+				var xmlRow:XML = new XML( <row id={item["id"]} /> );
+				
+				for each ( var dataGridCell:Object in dataGridColumns ) 
+				{
+					xmlRow.appendChild(
+						<cell name={dataGridCell.dataField}>
+						{item[dataGridCell.dataField]}
+						</cell> );
+				}
+				
+				requestXMLParam.appendChild( xmlRow );
+				
+				return requestXMLParam;
+			}
+			
 			protected function commit_clickHandler( event : MouseEvent ) : void
 			{
+				var item : Object;
+				var requestXMLParam:XML;
+				
+				for each ( item in dataGridProvider )
+				{
+					requestXMLParam = getXMLByRow( item );
+					for  ( var tt : String in item )
+					{
+						
+						if ( dataGridProviderOld[item["id"]] )
+						{
+							if ( dataGridProviderOld[item["id"]][tt] && item[tt] != dataGridProviderOld[item["id"]][tt] )
+							{
+								queue.addRequest(
+									item['GUID'],
+									'update_row',
+									requestXMLParam.toXMLString() );
+								
+								break;
+							}
+						}
+						else
+						{
+							queue.addRequest(
+								item['GUID'],
+								'add_row',
+								requestXMLParam.toXMLString() );
+							break;
+						}
+					}
+				}
+				
 				queue.addEventListener( QueueEvent.QUEUE_COMPLETE, queueCommitCompleteHandler );
-				//__alertArea.selectedChild = __inProgress;
 				queue.execute();
 				
 				updateQueueLength();
@@ -449,7 +489,6 @@
 			
 			public function updateTable() : void
 			{
-				commit.enabled = false;
 				updateQueueLength();
 				
 				/* ReRequest rows count */
@@ -472,90 +511,6 @@
 			{
 				getPageResponseHandler( message );
 				dataTable.verticalScrollPosition = verticalScrollPositionStore;
-			}
-			
-			private function itemEditBegin( event : DataGridEvent ) : void 
-			{
-				editableValue = dataGridProvider[ event.rowIndex ][ dataGridColumns[ event.columnIndex ].dataField ].toString();
-			}
-			
-			private function itemEditEnd( event : DataGridEvent ) : void 
-			{
-				if ( event.currentTarget.itemEditorInstance.text != editableValue ) 
-				{
-					/* check entered data over database integrity */
-					if ( dataGridColumnsProps[ event.columnIndex ][ 'aincrement' ] ) 
-					{
-						event.currentTarget.itemEditorInstance.text = editableValue;
-					} 
-					else 
-					{
-						if ( StringUtil.trim( event.currentTarget.itemEditorInstance.text ) == '' ) 
-						{
-							if ( dataGridColumnsProps[ event.columnIndex ][ 'notnull' ] == 'true' )
-								event.currentTarget.itemEditorInstance.text = 'REQUIRED';
-							else
-								event.currentTarget.itemEditorInstance.text = '';
-						}
-					}
-					
-					/* Apply changed data */		
-					dataGridProvider[ event.rowIndex ][ dataGridColumns[ event.columnIndex ].dataField ] = event.currentTarget.itemEditorInstance.text;
-					
-					/* Construct request */
-					var requestXMLParam:XML = new XML( <data /> );
-					var xmlRow:XML = new XML( <row id={dataGridProvider[event.rowIndex]['id']} /> );						
-					for each (var dataGridCell:Object in dataGridColumns) {
-						xmlRow.appendChild(
-							<cell name={dataGridCell.dataField}>
-							{dataGridProvider[event.rowIndex][dataGridCell.dataField]}
-							</cell> );
-					}
-					
-					requestXMLParam.appendChild( xmlRow );
-					
-					/* Apply reqest to the queue */
-					if ( dataGridProvider[ event.rowIndex ][ 'changed' ] )
-					{
-						if ( dataGridProvider[ event.rowIndex ][ 'fnew' ] ) {
-							
-							queue.updateRequest(
-								dataGridProvider[event.rowIndex]['GUID'],
-								'add_row',
-								requestXMLParam.toXMLString() );
-						} 
-						else 
-						{
-							queue.updateRequest(
-								dataGridProvider[event.rowIndex]['GUID'],
-								'update_row',
-								requestXMLParam.toXMLString() );
-						}
-					} 
-					else 
-					{
-						/* If new changed item appeared... */
-						dataGridProvider[ event.rowIndex ][ 'changed' ] = true;
-						commit.enabled = true;
-						
-						if ( dataGridProvider[ event.rowIndex ][ 'fnew' ] ) 
-						{
-							queue.updateRequest(
-								dataGridProvider[event.rowIndex]['GUID'],
-								'add_row',
-								requestXMLParam.toXMLString() );
-						} 
-						else 
-						{
-							queue.addRequest(
-								dataGridProvider[event.rowIndex]['GUID'],
-								'update_row',
-								requestXMLParam.toXMLString() );
-						}
-					}
-				}
-				
-				updateQueueLength();
 			}
 			
 			protected function deleteRow_clickHandler( event : MouseEvent ) : void
@@ -589,8 +544,6 @@
 				
 				dataGridProvider.removeItemAt( selectedRowIndex );
 				
-				commit.enabled = true;
-				
 				updateQueueLength();
 			}
 			
@@ -620,6 +573,13 @@
 				getPageRequest();
 			}
 			
+			
+			protected function dataTable_itemEditEndHandler(event:AdvancedDataGridEvent):void
+			{
+				// TODO Auto-generated method stub
+				var tt : int = 0;
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -627,12 +587,9 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	<s:VGroup width="100%" height="100%">
-			<mx:DataGrid id="dataTable" dataProvider="{dataGridProvider}"
-						 itemEditBegin="itemEditBegin(event)" itemEditEnd="itemEditEnd(event)"
-						 width="100%" height="100%" horizontalScrollPolicy="auto" verticalScrollPolicy="auto"
-						 editable="true"
-						 doubleClickEnabled="true" keyDown="dataTable_keyDownHandler(event)"
-						 draggableColumns="false" sortableColumns="false" />
+			<mx:AdvancedDataGrid id="dataTable" dataProvider="{dataGridProvider}" itemEditEnd="dataTable_itemEditEndHandler(event)"
+						 width="100%" height="100%" horizontalScrollPolicy="auto" verticalScrollPolicy="auto"				 
+						 draggableColumns="true" sortableColumns="true" />
 		<s:Group width="100%" height="50">
 			<s:Rect width="100%" height="100%">
 				<s:fill>
@@ -646,17 +603,17 @@
 				
 				<s:Button id="deleteRow" height="20" label="delete row" click="deleteRow_clickHandler(event)"/>
 				
-				<s:Button id="commit" height="20" enabled="false" label="commit" click="commit_clickHandler(event)"/>
+				<s:Button id="commit" height="20" label="commit" click="commit_clickHandler(event)"/>
 				
-				<s:Button id="discard" height="20" enabled="{commit.enabled}" label="discard" click="discard_clickHandler(event)"/>
+				<s:Button id="discard" height="20"  label="discard" click="discard_clickHandler(event)"/>
 				
 				<mx:HBox width="100%" height="20" horizontalAlign="left" verticalAlign="middle" horizontalGap="0" paddingRight="0" paddingLeft="0" visible="false">
 					<mx:Label text="Pages:" />
-					<mx:HBox id="pagesArea" width="100%" height="20" verticalAlign="middle" horizontalGap="0" enabled="{!commit.enabled}"
+					<mx:HBox id="pagesArea" width="100%" height="20" verticalAlign="middle" horizontalGap="0"
 							 disabledOverlayAlpha="0.1" />
 					<mx:Label text="Records per page:" fontSize="9" />
-					<mx:TextInput id="amount" borderColor="#999999" borderStyle="solid" height="20" fontSize="9" width="45" enabled="{!commit.enabled}" />
-					<mx:Button height="20" label="apply" cornerRadius="0" click="{amountApplyBtnClickHandler();}" enabled="{!commit.enabled}" />
+					<mx:TextInput id="amount" borderColor="#999999" borderStyle="solid" height="20" fontSize="9" width="45" />
+					<mx:Button height="20" label="apply" cornerRadius="0" click="{amountApplyBtnClickHandler();}"/>
 				</mx:HBox>
 				
 			</s:HGroup>
