--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Question.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Question.mxml
@@ -296,14 +296,14 @@
 	<mx:VBox height="100%" width="100%" horizontalAlign="center">
 		<mx:Canvas width="100%" height="100%" label="{LanguageManager.sentences.question}">
 			<mx:HBox verticalAlign="top" left="10" top="10" bottom="10" right="10">
-				<mx:Image source="@Embed('../../../../resources/question.png')"/>
+				<mx:Image source="@Embed('/assets/images/Question.png')"/>
 				<mx:Text width="100%" height="100%" id="txtQuestion"/>
 			</mx:HBox>
 		</mx:Canvas>
 		<mx:HRule width="95%"/>
 		<mx:Canvas width="100%" height="100%" label="{LanguageManager.sentences.answer}">
 			<mx:HBox left="10" right="10" top="10" bottom="10">
-				<mx:Image source="@Embed('../../../../resources/user.png')" autoLoad="true"/>
+				<mx:Image source="@Embed('/assets/images/User.png')" autoLoad="true"/>
 				<mx:Canvas width="100%" height="100%" id="cnvsAnswer">
 					<mx:RadioButtonGroup id="radioGroup"/>
 				</mx:Canvas>
