--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableQuery.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableQuery.mxml
@@ -13,7 +13,7 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayCollection;
-			import mx.controls.dataGridClasses.DataGridColumn;
+			import mx.controls.advancedDataGridClasses.AdvancedDataGridColumn;
 			import mx.utils.UIDUtil;
 			
 			import net.vdombox.ide.common.vo.PageVO;
@@ -109,7 +109,7 @@
 				dataGridColumns = [];
 				for each (var xmlHeader:XML in tableStructureXML.column) 
 				{
-					var _header:DataGridColumn = new DataGridColumn();
+					var _header:AdvancedDataGridColumn = new AdvancedDataGridColumn();
 					var columnProps : StructureVO = new StructureVO( xmlHeader );
 					
 					dataGridColumnsProps.push( columnProps );
