--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeElement.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeElement.mxml
@@ -228,6 +228,10 @@
 					y = 0;
 				else
 					y = newY;
+				
+			/*	treeElementVO.left = x;
+				treeElementVO.top = y;*/
+
 			}
 
 			private function stage_mouseMoveHandlerExt( event : MouseEvent ) : void
