--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/PageTypeItemRenderer.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/PageTypeItemRenderer.mxml
@@ -22,36 +22,42 @@
 			{
 				dispatchEvent( new ItemRendererEvent( ItemRendererEvent.CREATED ) );
 			}
+			
+			override public function set selected( value : Boolean ) : void
+			{ 
+				super.selected = value;
+				
+				currentState = value ? "selected" : "normal"
+			} 
 		]]>
 	</fx:Script>
 
 	<s:states>
-
-		<s:State name="normal" />
-
-		<s:State name="hovered" />
-
-		<s:State name="selected" />
+		<s:State name="normal"/>
+		<s:State name="selected"/>
 	</s:states>
 
 	<s:Rect bottom="0" left="0" right="0" top="0">
-
 		<s:fill>
-
-			<s:SolidColor color="0x999999"
-						  alpha="0" alpha.hovered="0.2" alpha.selected="0.6" />
+			<s:SolidColor color.normal="#3A3A3A" color.selected="#4E4E4E" />
 		</s:fill>
 	</s:Rect>
 
-	<s:HGroup height="100%" width="100%">
+	<s:HGroup height="100%" width="100%" bottom="2" paddingLeft="20" paddingTop="10" paddingBottom="10">
 
 		<mx:Image height="58" source="{ _typeResource.data }" width="58" />
 
-		<s:VGroup height="100%" width="100%">
+		<s:VGroup height="100%" width="100%" paddingTop="10" gap="8">
 
-			<s:Label text="{ data.displayName }" />
+			<s:Label text="{ data.displayName }" fontWeight="bold" fontSize="14" color="#FFFFFF"/>
 
-			<s:RichText height="100%" text="{ data.description }" width="100%" />
+			<s:RichText height="100%" text="{ data.description }" fontSize="12" width="100%" color="#FFFFFF"/>
 		</s:VGroup>
 	</s:HGroup>
+	
+	<s:Rect width="100%" top="0" height="24">
+		<s:fill>
+			<s:BitmapFill source = "@Embed('assets/ide-new-page-divider-shadow.png')" smooth="true" fillMode="repeat"/>
+		</s:fill>
+	</s:Rect>
 </s:ItemRenderer>
